# agi23-g8.github.io

./: Cargo.toml  README.md  index.html
.github/workflows/: publish_gh_pages.yml
img/team/: index.md
src/: app.rs  carousel.rs  cubes_traveller.rs  gallery.rs  header.rs  main.rs  peak_panic.rs  team.rs
