[package]
name = "agi23-g8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
rand = { version = "0.8.5" }
getrandom = { version = "0.2.11", features = ["js"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
